--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Poke Api",
+            "name": "Pokemon Paste",
             "type": "python",
             "request": "launch",
-            "program": "poke_api.py",
+            "program": "pokemon_paste.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": ["charmander"]
